[build-system]
requires = [
    "setuptools>=82.0",
    "wheel>=0.47"
]
build-backend = "setuptools.build_meta"

[project]
name = "typhed.project.data"
dynamic = ["version"]
description = "A FastAPI + SQLAlchemy ORM backed Webhook for Clerk Authentication"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "vigilantloki", email = "pramanik.huf@gmail.com"}
]

keywords = [
    "clerk", "python", "webhook", "fastapi", "sqlalchemy", "alembic"
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic-extra-types>=2.8",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "email-validator>=2.1",
    "svix>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# NOTE: "UP" (pyupgrade) is intentionally excluded - the project convention
# mandates typing.Dict/List/Tuple over the builtin generics, which UP would
# rewrite. B008 is ignored because FastAPI's Depends() default is idiomatic.
select = ["E", "F", "I", "W", "B"]
ignore = ["B008"]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}
